fixed spacing

--- a/jcn-app/src/app/components/login-form/login-form.component.css
+++ b/jcn-app/src/app/components/login-form/login-form.component.css
@@ -57,6 +57,7 @@ box-shadow: 0 0 0 0 !important;
 
 .remember{
 color: black;
+margin-bottom: 20px;
 }
 
 .remember input
